--- a/views/login.pug
+++ b/views/login.pug
@@ -15,4 +15,4 @@ block content
           input(type="password", id="password", name="password", required)
           button.pure-button.pure-button-primary(id="submit") Entrar
         p#login-message
-  script(type="module" src="/js/authentication.js")
+  script(type="module" src="/js/alt-authentication.js")
