atualizacao do codigo para conter uma chamada de funcao

--- a/views/home.pug
+++ b/views/home.pug
@@ -10,5 +10,7 @@ block content
           h3= produto.nome
           p Descrição: #{produto.descricao}
           p Preço: R$ #{produto.preco}
+        
     else
       p Nenhum produto disponível no momento.
+    a(href="/listaprodutos") Consulta Produtos
